preparing to push to rittels-windy-plugins

--- a/src/global.less
+++ b/src/global.less
@@ -9,6 +9,10 @@
 //    color: red;
 //}
 
+#plugin-windy-plugin-picker-tools{
+    opacity: 0.7;
+}
+
 #picker-div-right {
     display:none;
     white-space: nowrap;
